# pytrevl

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  testing.ipynb
contrib/: docker-compose.yml  jupyter-setup.sh
examples/: _starter.ipynb  example-basic-column-chart.ipynb  example-score-component.ipynb  test-data-ordering.ipynb
pytrevl/: __init__.py  api.py  chart.py  chart_parent_class.py  charts.py  component.py  components.py  cube.py  dashboard.py  filter.py  new_chart.py  notebook.py  render.py  style.py  trevl_code_generator.py  utils.py
pytrevl.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pytrevl/api/: api.py  cube_api.py  cube_query.py  x_middle.py
tests/: chart_test.py  playground.ipynb  test_base_chart.py  test_cube_query.py  test_score_component.py  testing.ipynb
