[build-system]
requires = ["setuptools>=61.0", "python-highcharts"]
build-backend = "setuptools.build_meta"

[project]
name = "pytrevl"
version = "0.0.3"
authors = [
  { name="Trendence Institut", email="valentin.lorenzen@trendence.com" },
]
description = "Python interface to handle and modify TREVL backed visualizations"
readme = "README.md"
requires-python = "<=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/trendence/pytrevl"
"Bug Tracker" = "https://github.com/trendence/pytrevl/issues"